--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-html-validation": "^0.1.15"
+    "grunt-html-validation": "^0.1.15",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-requirejs": "~0.4.4",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-requirejs": "~0.4.2"
   }
 }
