--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-requirejs": "~0.4.2"
+    "grunt-requirejs": "~0.4.2",
+    "grunt-contrib-jst": "~0.6.0"
   }
 }
